added intuitions, algo for the problems